# rabbitmq-consumer

./: docker-compose.yml  main.py  pyproject.toml
