[tool.poetry]
name = "rabbitmq-consumer"
version = "0.1.0"
description = "RabbitMQ Consumer with FastAPI"
authors = ["Bruno de Oliveira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
